グループ更新APIを追加する
