# backend/internal/presentation/api/server.gen.go
@@ -28,6 +28,9 @@ type ServerInterface interface {
 	// グループの取得
 	// (GET /groups/{id})
 	GroupGet(ctx echo.Context, id string) error
+	// グループの更新
+	// (PUT /groups/{id})
+	GroupUpdate(ctx echo.Context, id string) error
 	// ヘルスチェック
 	// (GET /health)
 	HealthCheck(ctx echo.Context) error
@@ -115,6 +118,24 @@ func (w *ServerInterfaceWrapper) GroupGet(ctx echo.Context) error {
 
 	// Invoke the callback with all the unmarshaled arguments
 	err = w.Handler.GroupGet(ctx, id)
+	return err
+}
+
+// GroupUpdate converts echo context to params.
+func (w *ServerInterfaceWrapper) GroupUpdate(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "id" -------------
+	var id string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", ctx.Param("id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter id: %s", err))
+	}
+
+	ctx.Set(BearerAuthScopes, []string{})
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GroupUpdate(ctx, id)
 	return err
 }
 
@@ -249,6 +270,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/groups", wrapper.GroupGetAll)
 	router.POST(baseURL+"/groups", wrapper.GroupCreate)
 	router.GET(baseURL+"/groups/:id", wrapper.GroupGet)
+	router.PUT(baseURL+"/groups/:id", wrapper.GroupUpdate)
 	router.GET(baseURL+"/health", wrapper.HealthCheck)
 	router.GET(baseURL+"/lendings", wrapper.LendingGetAll)
 	router.POST(baseURL+"/lendings", wrapper.LendingCreate)
